# dgx-toolbox

./: .gitignore  .gitmodules  .sparkrun-pin  CHANGELOG.md  LICENSE  NOTICE  README.md  build-toolboxes.sh  code-server-creds.sh  data-toolbox-build.sh  data-toolbox-jupyter.sh  data-toolbox.sh  docker-compose.data.yml  docker-compose.inference.yml  eval-toolbox-build.sh  eval-toolbox-jupyter.sh  eval-toolbox.sh  example.bash_aliases  example.vllm-model  lib.sh  modelstore.sh  ngc-jupyter.sh  setup-litellm-config.sh  setup-ollama-remote.sh  start-argilla.sh  start-label-studio.sh  start-litellm-sync.sh  start-litellm.sh  start-n8n.sh  start-open-webui-sync.sh  start-open-webui.sh  start-vllm-sync.sh  start-vllm.sh  status.sh  triton-trtllm-sync.sh  unsloth-studio.sh
harness/: __init__.py  main.py  pyproject.toml  start-harness.sh
harness/auth/: bearer.py
harness/config/: constitution.yaml  loader.py  rail_loader.py  redteam.yaml  redteam_quick.yaml  redteam_standard.yaml  redteam_thorough.yaml  tenants.yaml
harness/critique/: __init__.py  __main__.py  analyzer.py  constitution.py  engine.py
harness/eval/: __main__.py  gate.py  lm_model.py  metrics.py  replay.py  runner.py  trends.py
harness/guards/: __init__.py  engine.py  nemo_compat.py  normalizer.py  types.py
harness/hitl/: __main__.py  calibrate.py  export.py  router.py  ui.py
harness/pii/: __init__.py  redactor.py
harness/proxy/: __init__.py  admin.py  litellm.py
harness/ratelimit/: __init__.py  sliding_window.py
harness/redteam/: __main__.py  balance.py  engine.py  garak_runner.py  router.py
harness/scripts/: validate_aarch64.sh
harness/tests/: conftest.py  test_analyzer.py  test_auth.py  test_constitution.py  test_critique.py  test_eval_gate.py  test_eval_lm_model.py  test_eval_replay.py  test_eval_store.py  test_eval_trends.py  test_guardrails.py  test_hitl.py  test_nemo_compat.py  test_normalizer.py  test_pii.py  test_proxy.py  test_rail_config.py  test_ratelimit.py  test_redteam.py  (+2 more)
telemetry/: conftest.py  pyproject.toml
(+249 files in other folders)
