[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["harness*"]

[project]
name = "dgx-harness"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "argon2-cffi>=25.1",
    "aiosqlite>=0.21",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.8.5",
    "confusable-homoglyphs>=3.2",
    "langchain-openai>=0.1",
    "nemoguardrails>=0.21",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
eval = [
    "lm-eval>=0.4.9",
    "asciichartpy>=1.5",
]
redteam = ["garak>=0.14"]
hitl = ["gradio>=6.0,<7.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
