[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dgx-telemetry"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "nvidia-ml-py>=13.595,<14",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["telemetry*"]
